# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: 2. Hello_Window.md  3.1 Hello_triangle_pt1.md  3.2 Hello_trinagle_pt2.md  3.3 Hello_Triangle_pt3.md  4. Shaders and more.md  5. Textures.md  6. Math (Transformations).md  7. Drawing cube(s).md  8. camera.md  setting_things_up.md
include/: camera.h  shader.h
scripts/: br.sh  build.sh  configure.sh  run.sh
shaders/: frag.glsl  vert.glsl
